Recreating blog posts pt1

--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ text:
     older: 'Older'
 
 # Comments
-disqus_shortname: al-folio # put your disqus shortname
+disqus_shortname: gaborfarkas-github-io # put your disqus shortname
 
 # Optional features
 show_social_icons:  false
