--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ last_updated: # leave blank if you don't want to display last updated
 github_username: GaborFarkas # put your github username
 linkedin_username: gábor-farkas-922262113/ # put your linkedin username
 scholar_authorid: i-iSuGgAAAAJ # put your google scholar author id
-reaseachgate_user: Gabor_Farkas4
+researchgate_user: Gabor_Farkas4
 academia_affil: pte
 academia_user: GaborFarkas
 
