--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,9 @@ jobs:
           cache: 'npm'
           
       - name: Build application
-        run: npm run build
+        run: |
+          npm install
+          npm run build
   
       - name: Archive artifact
         shell: sh
