--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,12 +53,9 @@ jobs:
             -cvf "$RUNNER_TEMP/artifact.tar" \
             .
           echo ::endgroup::
-
-      - name: Configure Pages
-        uses: actions/configure-pages@v4
   
       - name: Upload artifact
-        uses: actions/artifact@v4
+        uses: actions/upload-artifact@v3
         with:
           path: ${{ runner.temp }}/artifact.tar
           if-no-files-found: error
