--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,9 @@ jobs:
         run: |
           npm install
           npm run build
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
   
       - name: Archive artifact
         shell: sh
