--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
         "ng": "ng",
         "start": "ng serve",
         "start-insecure": "ng serve --host 0.0.0.0",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "test": "ng test"
+        "build": "npm run prebuild && ng build",
+        "watch": "npm run prebuild && ng build --watch --configuration development",
+        "test": "ng test",
+        "prebuild": "node build/generate-stories.mjs"
     },
     "repository": {
         "type": "git",
@@ -46,6 +47,7 @@
         "@angular/cli": "^17.3.3",
         "@angular/compiler-cli": "^17.3.2",
         "@types/jasmine": "~5.1.0",
+        "git-date-extractor": "^4.0.1",
         "jasmine-core": "~5.1.0",
         "karma": "~6.4.0",
         "karma-chrome-launcher": "~3.2.0",
@@ -53,6 +55,7 @@
         "karma-jasmine": "~5.1.0",
         "karma-jasmine-html-reporter": "~2.1.0",
         "tailwindcss": "^3.4.3",
-        "typescript": "~5.3.2"
+        "typescript": "~5.3.2",
+        "walk": "^2.3.15"
     }
 }
