Style story cards

--- a/src/components/story/insight/web-programming-2/config.json
+++ b/src/components/story/insight/web-programming-2/config.json
@@ -1,4 +1,5 @@
 {
     "title": "Web Programming II.",
-    "description": "Take a look into a Web Programming II. class with sample codes and some fascinating per-lesson insights from the professor's perspective."
+    "description": "Take a look into a Web Programming II. class with sample codes and some fascinating per-lesson insights from the professor's perspective.",
+    "thumbUrl": "/assets/stories/thumbs/web-programming-2.png"
 }
