Update deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,23 +22,25 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      
+
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v3
-  
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - name: Add tokens
         shell: sh
-        run: sed -i "s/{MAPTILER_API_KEY}/${{ secrets.MAPTILER_API_KEY }}/g" src/environments/environment.ts   
-      
+        run: sed -i "s/{MAPTILER_API_KEY}/${{ secrets.MAPTILER_API_KEY }}/g" src/environments/environment.ts
+
       - name: Setup Node JS
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
-          
+
       - name: Build application
         run: |
           npm install
@@ -47,7 +49,7 @@ jobs:
       - name: Use index.html as custom 404.html
         shell: sh
         run: cp dist/project-w/browser/index.html dist/project-w/browser/404.html
-  
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
