--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/GaborFarkas/gaborfarkas.github.io#readme",
   "dependencies": {
+    "@analytics/simple-analytics": "^0.4.0",
     "@angular/animations": "^18.0.1",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^18.0.1",
@@ -37,6 +38,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "analytics": "^0.8.13",
     "maplibre-gl": "^4.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
