--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "npm run prebuild && ng build && npm run postbuild",
     "watch": "npm run prebuild && ng build --watch --configuration development",
     "test": "ng test",
-    "prebuild": "node build/generate-stories.mjs",
+    "prebuild": "node build/generate-stories.mjs && tsx build/generate-feature-support.ts",
     "postbuild": "node build/generate-htmls.mjs"
   },
   "repository": {
@@ -30,26 +30,28 @@
     "@angular/common": "^18.0.1",
     "@angular/compiler": "^18.0.1",
     "@angular/core": "^18.0.1",
-    "@angular/forms": "^18.0.1",
+    "@angular/forms": "^18.1.1",
     "@angular/platform-browser": "^18.0.1",
-    "@angular/platform-browser-dynamic": "^18.0.1",
-    "@angular/router": "^18.0.1",
+    "@angular/platform-browser-dynamic": "^18.1.1",
+    "@angular/router": "^18.1.1",
     "@fortawesome/angular-fontawesome": "^0.15.0",
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "analytics": "^0.8.13",
-    "maplibre-gl": "^4.3.2",
+    "maplibre-gl": "^4.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "^0.14.6"
+    "zone.js": "^0.14.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.0.2",
-    "@angular/cli": "^18.0.2",
-    "@angular/compiler-cli": "^18.0.1",
+    "@angular-devkit/build-angular": "^18.1.1",
+    "@angular/cli": "^18.1.1",
+    "@angular/compiler-cli": "^18.1.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
+    "csv": "^6.3.9",
     "git-date-extractor": "^4.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -58,7 +60,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "node-html-parser": "^6.1.13",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.6",
+    "tsx": "^4.16.2",
     "typescript": "~5.4.5",
     "walk": "^2.3.15"
   }
