--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "analytics": "^0.8.13",
+    "leaflet": "^1.9.4",
     "maplibre-gl": "^4.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -51,6 +52,7 @@
     "@angular/compiler-cli": "^18.1.1",
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.12",
     "csv": "^6.3.9",
     "git-date-extractor": "^4.0.1",
     "jasmine-core": "~5.1.0",
