--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "analytics": "^0.8.13",
+    "cesium": "^1.119.0",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^4.5.0",
     "ol": "^9.2.4",
