Add example system

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,11 @@
                                 "glob": "**/*",
                                 "input": "node_modules/cesium/Build/Cesium",
                                 "output": "assets/cesium"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "node_modules/leaflet/dist/images",
+                                "output": "assets/leaflet"
                             }
                         ],
                         "styles": [
