Add commercial tile examples

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,10 @@ jobs:
 
       - name: Add tokens
         shell: sh
-        run: sed -i "s/{MAPTILER_API_KEY}/${{ secrets.MAPTILER_API_KEY }}/g" src/environments/environment.ts
+        run: |
+          sed -i "s/{MAPTILER_API_KEY}/${{ secrets.MAPTILER_API_KEY }}/g" src/environments/environment.ts
+          sed -i "s/{GOOGLE_MAPS_API_KEY}/${{ secrets.GOOGLE_MAPS_API_KEY }}/g" src/environments/environment.ts
+          sed -i "s/{BING_API_KEY}/${{ secrets.BING_API_KEY }}/g" src/environments/environment.ts
 
       - name: Setup Node JS
         uses: actions/setup-node@v4
