--- a/package.json
+++ b/package.json
@@ -30,32 +30,33 @@
     "@angular/common": "^18.0.1",
     "@angular/compiler": "^18.0.1",
     "@angular/core": "^18.0.1",
-    "@angular/forms": "^18.1.1",
+    "@angular/forms": "^18.2.6",
     "@angular/platform-browser": "^18.0.1",
-    "@angular/platform-browser-dynamic": "^18.1.1",
-    "@angular/router": "^18.1.1",
+    "@angular/platform-browser-dynamic": "^18.2.6",
+    "@angular/router": "^18.2.6",
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "analytics": "^0.8.13",
-    "cesium": "^1.119.0",
+    "analytics": "^0.8.14",
+    "cesium": "^1.121.1",
     "leaflet": "^1.9.4",
-    "maplibre-gl": "^4.5.0",
+    "maplibre-gl": "^4.7.1",
+    "monaco-editor": "^0.52.0",
     "ol": "^9.2.4",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "^0.14.8"
+    "tslib": "^2.7.0",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.1.1",
-    "@angular/cli": "^18.1.1",
-    "@angular/compiler-cli": "^18.1.1",
+    "@angular-devkit/build-angular": "^18.2.6",
+    "@angular/cli": "^18.2.6",
+    "@angular/compiler-cli": "^18.2.6",
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
-    "csv": "^6.3.9",
+    "csv": "^6.3.10",
     "git-date-extractor": "^4.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -64,8 +65,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "node-html-parser": "^6.1.13",
-    "tailwindcss": "^3.4.6",
-    "tsx": "^4.16.2",
+    "tailwindcss": "^3.4.13",
+    "tsx": "^4.19.1",
     "typescript": "~5.4.5",
     "walk": "^2.3.15"
   }
