--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch": "npm run prebuild && ng build --watch --configuration development",
     "test": "ng test",
     "prebuild": "node build/generate-stories.mjs && tsx build/generate-feature-support.ts",
-    "postbuild": "node build/generate-htmls.mjs"
+    "postbuild": "node build/generate-htmls.mjs",
+    "generate-types": "bash build/generate-web-map-types.sh"
   },
   "repository": {
     "type": "git",
@@ -57,8 +58,10 @@
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
     "csv": "^6.3.10",
+    "dts-gen": "^0.10.3",
     "git-date-extractor": "^4.0.1",
     "jasmine-core": "~5.1.0",
+    "jsdom": "^25.0.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
