--- a/package.json
+++ b/package.json
@@ -58,16 +58,16 @@
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
     "csv": "^6.3.10",
-    "dts-gen": "^0.10.3",
     "git-date-extractor": "^4.0.1",
     "jasmine-core": "~5.1.0",
-    "jsdom": "^25.0.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "node-html-parser": "^6.1.13",
+    "rollup": "^4.23.0",
+    "rollup-plugin-dts": "^6.1.1",
     "tailwindcss": "^3.4.13",
     "tsx": "^4.19.1",
     "typescript": "~5.4.5",
