--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,11 @@
                                 "glob": "**/*",
                                 "input": "node_modules/monaco-editor/min/vs",
                                 "output": "/assets/monaco/vs"
+                            },
+                            {
+                                "glob": "*.ts",
+                                "input": "src/examples",
+                                "output": "/assets/web-mapping/examples"
                             }
                         ],
                         "styles": [
