--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "ol": "^10.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.7.0",
+    "vscode-oniguruma": "^2.0.1",
+    "vscode-textmate": "^9.1.0",
     "zone.js": "^0.14.10"
   },
   "devDependencies": {
