--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test": "ng test",
     "prebuild": "node build/generate-stories.mjs && tsx build/generate-feature-support.ts",
     "postbuild": "node build/generate-htmls.mjs",
-    "generate-types": "bash build/generate-web-map-types.sh"
+    "generate-types": "bash build/generate-web-map-types.sh",
+    "lint": "ng lint"
   },
   "repository": {
     "type": "git",
@@ -59,7 +60,9 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.14",
+    "angular-eslint": "18.4.0",
     "csv": "^6.3.10",
+    "eslint": "^9.13.0",
     "git-date-extractor": "^4.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -73,6 +76,7 @@
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.2",
     "typescript": "~5.4.5",
+    "typescript-eslint": "8.10.0",
     "walk": "^2.3.15"
   }
 }
