--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "maplibre-gl": "^4.7.1",
     "monaco-editor": "^0.52.2",
     "ol": "^10.3.1",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "vscode-oniguruma": "^2.0.1",
@@ -59,6 +60,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.15",
+    "@types/prismjs": "^1.26.5",
     "angular-eslint": "18.4.0",
     "csv": "^6.3.11",
     "eslint": "^9.17.0",
