Fix creation date of new article

--- a/src/components/story/casestudy/linux-as-programming-language/config.json
+++ b/src/components/story/casestudy/linux-as-programming-language/config.json
@@ -1,5 +1,6 @@
 {
     "title": "Linux as a programming language",
     "description": "A short story about a project started in bash becoming a full-fledged software... in bash.",
-    "thumbUrl": "/assets/stories/thumbs/linux-as-programming-language.png"
+    "thumbUrl": "/assets/stories/thumbs/linux-as-programming-language.png",
+    "created": "2025-01-08T17:37:38.000Z"
 }
