--- a/package.json
+++ b/package.json
@@ -27,14 +27,14 @@
   "homepage": "https://github.com/GaborFarkas/gaborfarkas.github.io#readme",
   "dependencies": {
     "@analytics/simple-analytics": "^0.4.1",
-    "@angular/animations": "^19.0.5",
-    "@angular/common": "^19.0.5",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.2.18",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.2.18",
-    "@angular/router": "^19.2.18",
+    "@angular/animations": "^20.3.16",
+    "@angular/common": "^20.3.16",
+    "@angular/compiler": "^20.3.16",
+    "@angular/core": "^20.3.16",
+    "@angular/forms": "^20.3.16",
+    "@angular/platform-browser": "^20.3.16",
+    "@angular/platform-browser-dynamic": "^20.3.16",
+    "@angular/router": "^20.3.16",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -54,9 +54,9 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.20",
-    "@angular/cli": "^19.2.20",
-    "@angular/compiler-cli": "^19.2.18",
+    "@angular/build": "^20.3.16",
+    "@angular/cli": "^20.3.16",
+    "@angular/compiler-cli": "^20.3.16",
     "@types/fs-extra": "^11.0.4",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.21",
@@ -76,7 +76,7 @@
     "rollup-plugin-dts": "^6.3.0",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.21.0",
-    "typescript": "~5.6.3",
+    "typescript": "~5.9.3",
     "typescript-eslint": "8.15.0",
     "walk": "^2.3.15"
   }
