--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.8.1",
     "vscode-oniguruma": "^2.0.1",
-    "vscode-textmate": "^9.3.2",
-    "zone.js": "^0.15.1"
+    "vscode-textmate": "^9.3.2"
   },
   "devDependencies": {
     "@angular/build": "^21.1.4",
@@ -65,19 +64,13 @@
     "csv": "^6.4.1",
     "eslint": "^9.39.2",
     "git-date-extractor": "^4.0.1",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
     "node-html-parser": "^6.1.13",
     "rollup": "^4.58.0",
     "rollup-plugin-dts": "^6.3.0",
     "tailwindcss": "^3.4.19",
     "tsx": "^4.21.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "8.15.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0",
     "walk": "^2.3.15"
   }
 }
